--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -3,3 +3,10 @@
 
 <p>This is my first web page!</p>
 <p>Isn't this nice?</p>
+<p>Here are some things that I am going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>JavasScript</li>
+  <li>And a lot more!</li>
+</ul>
