--- a/my-favorite-things.html
+++ b/my-favorite-things.html
@@ -11,6 +11,7 @@
   <p>Here are some of my favorite people!</p>
   <ul>
       <li>My brother Christopher</li>
+      <img src="img/dude.jpg" alt="Photo of a dude">
       <li>My mom and dad:
         <ul>
           <li>Steve</li>
@@ -22,6 +23,7 @@
     </ul>
 
   <h3>Flavors of ice cream</h3>
+    <img src="img/patrick-fore-380241.jpg" alt="Pretty Icecream">
   <p>These are my three favorites, in order:</p>
   <ol>
     <li>Pistachio</li>
