--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Web page #1</title>
   </head>
   <body>
@@ -10,7 +11,7 @@
     <p>This is my <strong>first web page!</strong></p>
     <p>Isn't this nice?</p>
 
-<img src="img/kari-shea-234355.jpg" alt="A cute photo of a kitten.">
+    <img src="img/kari-shea-234355.jpg" alt="A cute photo of a kitten.">
     <p>Here are some things that I am going to learn about coding:</p>
     <ul>
       <li>HTML</li>
@@ -21,5 +22,5 @@
     <p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
 
     <p>Check out <a href="http://www.epicodus.com/">Epicodus</a>. It's a great school for learning web programming!</p>
-</body>
+  </body>
 </html>
