--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
   <title>Janice's Favorite things</title>
 </head>
 <body>
