--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="css/styles.css" rel="stylesheet" type="text/css">
     <title>Web page #1</title>
   </head>
   <body>
